# minimal-solana-minter

./: .eslintignore  .eslintrc  .gitignore  .prettierrc  Anchor.toml  LICENSE  README.md  constants.ts  lint-staged.config.js  package.json  tsconfig.json  utils.ts
.husky/: pre-commit
programs/minimal_mint/: Cargo.toml
programs/minimal_mint/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
scripts/: initializeCandyMachine.ts  mintNFT.ts  updateCandyMachine.ts
tests/: initializeCandyMachine.ts  minimal_mint.ts  mintNFT.ts  updateCandyMachine.ts
